# notify-mcp

./: Cargo.toml  Dockerfile  README.md  build.sh  run.sh
src/: handler.rs  main.rs  tools.rs
